--- a/css/creative.css
+++ b/css/creative.css
@@ -1,7 +1,7 @@
 /*!
- * Start Bootstrap - Creative v3.3.7+1 (http://startbootstrap.com/template-overviews/creative)
+ * Start Bootstrap - Creative v3.3.7+1 (https://github.com/zoosky/template-overviews/creative)
  * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ * Licensed under MIT (https://github.com/zoosky/startbootstrap/blob/gh-pages/LICENSE)
  */
 html,
 body {
